...
    <!-- Spoken to screen reader users to explain action of deactivating Pin button state -->
    <string name="homescreen_unpin_a11y">Unpin</string>

    <!-- Spoken to screen reader users to describe Firefox homescreen -->
    <string name="homescreen_title">Homescreen</string>
    <string name="pin_label">Pin to homescreen</string>
    <string name="notification_pinned_site">Pinned to Firefox TV homescreen</string>
    <string name="notification_unpinned_site">Removed from Firefox TV homescreen</string>
    <!-- Short version of notification displayed when a site is added to homescreen. %1$s will be replaced with the name of the app -->
    <string name="notification_pinned_general2">Pinned to %1$s homescreen</string>
    <!-- Short version of notification displayed when a site is removed from homescreen. %1$s will be replaced with the name of the app -->
    <string name="notification_unpinned_general2">Removed from %1$s homescreen</string>

    <!-- The title displayed below the Google Search tile -->
...
