<?xml version="1.0" encoding="utf-8"?>
<!-- This Source Code Form is subject to the terms of the Mozilla Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/browserFragmentRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- fillViewport is necessary for the WebView to fill the ScrollView -->
    <org.mozilla.focus.iwebview.IWebView
        android:id="@+id/webview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarThumbVertical="@drawable/scrollbar_thumb"/>

    <!-- We need a background on the fullscreen view because the content  does not always fill the
         screen. We insert the fullscreen view into this container with a background, instead of
         the parent container, to avoid overdraw with the WebView. -->
    <org.mozilla.focus.widget.OnInterceptTouchEventFrameLayout
        android:id="@+id/fullscreenContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:visibility="gone" />

</FrameLayout>
